--- a/src/web/src/App.css
+++ b/src/web/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 /* Circle */
@@ -214,6 +215,7 @@
   animation-direction: alternate;
   animation-timing-function: cubic-bezier(0.5, 0.05, 1, 0.5);
   animation-iteration-count: infinite;
+  margin: -70px;
 }
 
 .person-image img {
