--- a/src/web/src/Login.css
+++ b/src/web/src/Login.css
@@ -20,6 +20,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 .characters img {
@@ -43,6 +44,18 @@
   cursor: pointer;
 }
 
+.arrow-button-left,
+.arrow-button-right {
+  background: white;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  color: #2a3b3d;
+  padding: 12px 15px;
+}
+
 .selected {
   background-color: #efead8;
   border-radius: 2rem;
@@ -53,16 +66,7 @@
 .select-box {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  position: relative;
-  top: -600px;
-  background-color: #fff;
-  border-radius: 1rem;
   padding: 32px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .select-box p {
