update UI and font, as well as add 9th character

--- a/src/web/src/App.css
+++ b/src/web/src/App.css
@@ -23,7 +23,7 @@
 
 /* Title */
 .title {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 3rem;
   color: #2a3b3d;
   text-transform: uppercase;
